--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
     "name": "lawiet/entrego",
     "description": "Entrego courier integration",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "version": "1.0.0",
     "authors": [
         {
